fixed overflow for small screens

--- a/public/style.css
+++ b/public/style.css
@@ -244,3 +244,10 @@ span {
   padding: 0;
 
 }
+
+
+@media only screen and (max-width: 1000px){
+  body {
+    overflow: auto;
+  }
+}
